@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1242] fixed adding macro in triggers editing form (Aly)
  - [ZBX-1493] fixed disabled host icon view (Aly)
  - [ZBX-1546] fixed processing link triggers on map (Aly)
  - [ZBX-1476] fixed host links in map (Aly)
